# first

./: Dockerfile  pyproject.toml
app/: alembic.ini  bot.py  control.py  docs.db  models.py  scraper.py  sqlTables.py  sql_tables.py  version_control.py
app/alembic/: env.py
app/alembic/versions/: e365cd886754_create_account_table.py  ef260feb24d8_create_account_table.py
app/migrations/: 1.sql  2.sql  versions.db
app/repotory/: basemodels.py  courses.py  facultys.py  forms.py  studentgroups.py
